// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notepad should render content 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Notepad
    backgroundColor="#000000"
    color="#ffffff"
    content="this is some content 😎"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "this is some content 😎",
      "className": "notepad-editor",
      "contentEditable": true,
      "style": Object {
        "backgroundColor": "#000000",
        "color": "#ffffff",
      },
      "suppressContentEditableWarning": true,
    },
    "ref": null,
    "rendered": "this is some content 😎",
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "this is some content 😎",
        "className": "notepad-editor",
        "contentEditable": true,
        "style": Object {
          "backgroundColor": "#000000",
          "color": "#ffffff",
        },
        "suppressContentEditableWarning": true,
      },
      "ref": null,
      "rendered": "this is some content 😎",
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Notepad should render correctly with no props 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Notepad
    backgroundColor="#000000"
    color="#ffffff"
    content="Hello World! 😀"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "Hello World! 😀",
      "className": "notepad-editor",
      "contentEditable": true,
      "style": Object {
        "backgroundColor": "#000000",
        "color": "#ffffff",
      },
      "suppressContentEditableWarning": true,
    },
    "ref": null,
    "rendered": "Hello World! 😀",
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Hello World! 😀",
        "className": "notepad-editor",
        "contentEditable": true,
        "style": Object {
          "backgroundColor": "#000000",
          "color": "#ffffff",
        },
        "suppressContentEditableWarning": true,
      },
      "ref": null,
      "rendered": "Hello World! 😀",
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
